# MLOps-workshop

./: .dockerignore  .env.example  .gitignore  README.md  Taskfile.yml  devbox.json  docker-compose.yml  pyproject.toml
docker/: Dockerfile
src/: main.py
src/models/: __init__.py  generation.py
