[project]
name = "mlops-workshop"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115.12", "uvicorn>=0.34.2"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = ["ruff>=0.11.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
